=== Release 0.4.1
* Added new helper method to remove all whitespace
* Added ability to merge data when creating a set of stubs with StubCreator

=== Release 0.4 / 2016-07-20
* Added new class (StubCreator) to create a set of stubs from a yaml file

=== Release 0.3.1 / 2016-06-27
* Added remove_newlines method to String as a helper for rendering subtemplates
* Added escape_double_quotes method to String as a helper for rendering subtemplates
* Added empty Hash as default parameter for stub_with_erb

=== Release 0.3 / 2016-06-27
* Removed the config directory from the gem thereby reducing the size
* Added documentation

=== Release 0.2 / 2016-06-16
* Reorganized the imports to make it easier to utilize the rake tasks

=== Release 0.1 / 2016-06-15
* Initial release with basic functionality